# OpenGLStudy

./: CMakeLists.txt  camera.h  drawATriangle.cpp  learnColorAndLight.cpp  learnCoordAndCamera.cpp  learnTexture.cpp  learnTransformation.cpp  learnUniform.cpp  main.cpp  shader.h  tools.h
glad/include/glad/: glad.h
glad/src/: glad.c
shader/: learnColorAndLight.vs  learnColorAndLight1.fs  learnColorAndLight2.fs  learnCoordAndCamera.fs  learnCoordAndCamera.vs  learnTexture.vs  learnTransformation.fs  learnTransformation.vs  learnUniform.vs  testShader.fs  testShader.vs
